--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_location_reminder">Location Reminder</string>
     <string name="title_activity_time_reminder">Time Reminder</string>
+    <string name="google_app_id">819999241931</string>
 </resources>
